# camera

./: CMakeLists.txt
cmake_modules/: FindQHYCCD.cmake  FindUSB-1.cmake
src/: CMakeLists.txt  main.cpp
